---
source: src/main.rs
expression: output_content
---
# 20130924 MrW Data format changed to tab, so that palettes can be transferred between fp7 and fmp12 formats
# 20121126 MrW fmp12-compatible
# 20121101 MrW Nice!

AnwenderAbbruchZulassen setzen [ OFF ]
Fehleraufzeichnung setzen [ ON ]

# Script settings
Variable setzen [ $FolderPath ; Hole( DesktopPfad ) ]
Variable setzen [ $FileName ; "fmSyntaxColorizer-Palettes.txt" ]

# Var
Variable setzen [ $FilePath ; $FolderPath & $FileName ]


Fenster fixieren
Gehe zu Bezugsdatensatz ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "74" ] ⚠️⚠️⚠️

Wenn [ Hole( LayoutTabellenname ) <> "_Color" ]
	Gehe zu Layout [ Layout: <Originallayout> ; Animation: Ohne ]
	Eigenes Dialogfeld anzeigen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "87" ] ⚠️⚠️⚠️
	Aktuelles Script verlassen []
	# -->
Ende (wenn)

# Set palette names
Ersetze alle Feldwerte [ _Color::PaletteName ; Durch Berechnung ersetzen: Color.Palette_byID::PaletteName ]
Sortieren ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "39" ] ⚠️⚠️⚠️

# Export Colors
// Datensätze exportieren ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "36" ] ⚠️⚠️⚠️
Datensätze exportieren ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "36" ] ⚠️⚠️⚠️
Variable setzen [ $error ; Hole( LetzteFehlerNr ) ]
Wenn [ $error ]
	Gehe zu Layout [ Layout: <Originallayout> ; Animation: Ohne ]
	Eigenes Dialogfeld anzeigen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "87" ] ⚠️⚠️⚠️
	Aktuelles Script verlassen []
	# -->
Ende (wenn)

Gehe zu Layout [ Layout: <Originallayout> ; Animation: Ohne ]
Variable setzen [ $n ; Hole( AnzahlGefundeneDatensätze ) ]
Eigenes Dialogfeld anzeigen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "87" ] ⚠️⚠️⚠️
